TASK-030 — Publish progression configuration drafts as immutable versions (#5)
* feat: publish progression configuration drafts

* test: cover immutable progression configuration publication

* test: flush publication fact fixture before jdbc use

* fix: lock authoritative draft during publication

* test: cover publication retry and concurrency

* test: run publication race outside test transaction

* test: avoid flush outside publication race transaction

* test: clean committed publication race fixtures

* test: cover publication replacement race

* fix: preserve controlled stale publication conflicts

* test: align publication replacement race version

---------

Co-authored-by: josec.junior <josec.junior@totvs.com.br>